working update and delete statements
